--- a/src/common/containers/form/forms/login/login-form.component.html
+++ b/src/common/containers/form/forms/login/login-form.component.html
@@ -80,7 +80,7 @@
         </lnd-button>
     </div>
     <p class="mb-2">
-        Nebo se založte účet pomocí
+        Nebo si založte účet pomocí
     </p>
     <div class="row mb-5">
         <div class="col-md-6">
@@ -99,7 +99,7 @@
         </div>
     </div>
     <p class="font-size-14">
-        Založením účtu souhlasím s <a target="_blank">Obchodními podmínkami parc4u</a> a beru na vědomí informace o <a target="_blank">Ochraně osobních údajů</a>.
+        Založením účtu souhlasím s <a target="_blank" [href]="ROUTES.ROUTER_TERMS_OF_USE">Obchodními podmínkami parc4u</a> a beru na vědomí informace o <a target="_blank" [href]="ROUTES.ROUTER_SECURING_YOUR_DATA">Ochraně osobních údajů</a>.
     </p>
 </form>
 
