--- a/src/common/containers/form/forms/registration/registration-form.component.html
+++ b/src/common/containers/form/forms/registration/registration-form.component.html
@@ -59,6 +59,6 @@
         </div>
     </div>
     <p class="font-size-14">
-        Založením účtu souhlasím s <a target="_blank">Obchodními podmínkami parc4u</a> a beru na vědomí informace o <a target="_blank">Ochraně osobních údajů</a>.
+        Založením účtu souhlasím s <a target="_blank" [href]="ROUTES.ROUTER_TERMS_OF_USE">Obchodními podmínkami parc4u</a> a beru na vědomí informace o <a target="_blank" [href]="ROUTES.ROUTER_SECURING_YOUR_DATA">Ochraně osobních údajů</a>.
     </p>
 </form>
