--- a/src/common/ui/hamburger/hamburger.component.html
+++ b/src/common/ui/hamburger/hamburger.component.html
@@ -1,4 +1,4 @@
-<a 
+<div 
     class="menu-toggle"
     [class.menu-toggle--open]="isMenuOpen">
     <div
@@ -10,5 +10,5 @@
         <span class="menu-toggle__line"></span>
         <span class="menu-toggle__line"></span>
         <span class="menu-toggle__label">Menu</span>
+    </div>
 </div>
-</a>
