PXEPR-1335-loader html and styles added

--- a/src/assets/scss/01_base/_variables.scss
+++ b/src/assets/scss/01_base/_variables.scss
@@ -349,3 +349,9 @@ $accordion-toggle-icon-size:   20px;
 $accordion-padding:            ( $spacer * 2 );
 $accordion-padding-right-xs:   ( $spacer + $accordion-toggle-icon-size + $spacer );
 $accordion-padding-right:      ( $accordion-padding + $accordion-toggle-icon-size + $accordion-padding );
+
+
+// Accordion
+$loader-color:                 #2b4762;
+$loader-size:                  20px;
+
