--- a/src/assets/scss/front.scss
+++ b/src/assets/scss/front.scss
@@ -27,6 +27,7 @@
 /*   3. COMPONENTS           */
 /* ------------------------- */
 
+@import '03_components/loader';                                               // Loader
 @import '03_components/page-box';                                             // Page box
 @import '03_components/pdf';                                                  // Pdf
 
