feature/release-2.9.0-bugs

--- a/src/common/containers/form/forms/login/login-form.component.html
+++ b/src/common/containers/form/forms/login/login-form.component.html
@@ -78,7 +78,7 @@
         iconPosition="right">
     </lnd-button>
     <p class="mb-2">
-        Nebo si založte účet pomocí
+        Nebo se přihlaště pomocí
     </p>
     <div class="row mb-5">
         <div class="col-md-6">
