--- a/src/common/containers/form/forms/login/login-form.component.html
+++ b/src/common/containers/form/forms/login/login-form.component.html
@@ -81,18 +81,24 @@
         Nebo se přihlaště pomocí
     </p>
     <div class="row mb-5">
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
             <lnd-button
                 label="Facebook"
                 type="facebook"
                 (action)="oauthService.tryLoginWithOAuth(oAuthType.FACEBOOK)">
             </lnd-button>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
             <lnd-button
                 label="Google"
                 type="google"
                 (action)="oauthService.tryLoginWithOAuth(oAuthType.GOOGLE)">
+            </lnd-button>
+        </div>
+        <div class="col-md-auto mx-auto">
+            <lnd-button
+                label="Bankovní identita"
+                type="bankid">
             </lnd-button>
         </div>
     </div>
