--- a/src/common/containers/form/forms/registration/registration-form.component.html
+++ b/src/common/containers/form/forms/registration/registration-form.component.html
@@ -59,8 +59,10 @@
         </div>
         <div class="col-md-auto mx-auto">
             <lnd-button
+                *ngIf="!isProduction"
                 label="Bankovní identita"
-                type="bankid">
+                type="bankid"
+                (action)="oauthService.tryLoginWithOAuth(oAuthType.BANK_ID)">
             </lnd-button>
         </div>
     </div>
