--- a/src/common/ui/button/_button.component.variables.scss
+++ b/src/common/ui/button/_button.component.variables.scss
@@ -50,4 +50,5 @@ $btn-back-to-app-icon-size:        20px;
 
 $btn-video-play-size:              50px;
 
+$btn-social-height:                56px;
 $btn-social-facebook-bg:           #4267b2;
