--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -18,6 +18,10 @@
 .form-container {
 	max-width: $input-width;
 	margin: 0 auto;
+
+	&--large {
+		max-width: $input-width-large;
+	}
 }
 
 .form-control-info-wrapper {
