--- a/src/common/ui/forms/field/_field.component.variables.scss
+++ b/src/common/ui/forms/field/_field.component.variables.scss
@@ -1,5 +1,6 @@
 // Forms
 $input-width:                        300px;
+$input-width-large:                  320px;
 $input-height:                       50px;
 $input-padding-y:                    ( $spacer / 4 );
 $input-padding-x:                    $spacer;
