--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -267,13 +267,13 @@
 		}
 
 		&__link {
-			@include link-without-href {
+			@include link {
 				color: $font-text;
 				font-size: $perex-font-size;
 				text-transform: uppercase;
 			}
 
-			@include link-without-href-interactive {
+			@include link-interactive {
 				color: $font-text;
 				text-decoration: none;
 				border-bottom: 2px solid rgba($primary, .6);
