--- a/src/common/containers/form/forms/ask-for-offer/ask-for-offer-container.component.html
+++ b/src/common/containers/form/forms/ask-for-offer/ask-for-offer-container.component.html
@@ -83,15 +83,18 @@
                     [validationMessages]="formFields.validationMessages.consent"
                 ></lnd-form-field>
                 <div class="text-right">
-                    <lnd-button
-                        type="gradient-primary"
-                        class="w-100"
-                        [isDisabled]="fileUploader.isUploading"
-                        customClass="w-100 btn-public"
-                        [submit]="true"
-                        (action)="submitForm($event)"
-                        [label]="!fileUploader.isUploading ? 'Odeslat' : 'Odesílám...'">
-                    </lnd-button>
+                    <pxe-re-captcha #reCapcha
+                                    (resolveAction)="submitForm($event)">
+                        <lnd-button
+                            type="gradient-primary"
+                            class="w-100"
+                            [isDisabled]="fileUploader.isUploading"
+                            customClass="w-100 btn-public"
+                            [submit]="true"
+                            (action)="reCapcha.execute($event)"
+                            [label]="!fileUploader.isUploading ? 'Odeslat' : 'Odesílám...'">
+                        </lnd-button>
+                    </pxe-re-captcha>
                 </div>
             </div>
         </div>
