--- a/src/app/layouts/public/public-layout.component.html
+++ b/src/app/layouts/public/public-layout.component.html
@@ -19,6 +19,11 @@
         (logoutAction)="logout()">
     </lnd-header>
     <main class="main">
+        <re-captcha
+            #captchaRef="reCaptcha"
+            (resolved)="resolveAction.emit(lastData);reset()"
+            (error)="errored($event)"
+        ></re-captcha>
         <router-outlet></router-outlet>
         <lnd-modal-dynamic></lnd-modal-dynamic>
     </main>
