--- a/src/app/pages/public/sign-up/sign-up.component.html
+++ b/src/app/pages/public/sign-up/sign-up.component.html
@@ -38,7 +38,7 @@
                             </ol>
                         </div>
                         <div class="col-md-8 offset-md-2 col-xl-10">
-                            <pxe-ask-for-offer-container #fileContainer></pxe-ask-for-offer-container>-->
+                            <pxe-ask-for-offer-container #fileContainer></pxe-ask-for-offer-container>
                         </div>
                     </div>
                 </div>
