PXEPR-1396 mixin for links edit

--- a/src/assets/scss/01_base/_mixins.scss
+++ b/src/assets/scss/01_base/_mixins.scss
@@ -296,6 +296,8 @@
  */
 
 @mixin link-without-href() {
+	&,
+	&:visited,
 	&:not([href]):not([tabindex]),
 	&:not([href]):not([tabindex]):visited {
 		@content;
@@ -313,6 +315,9 @@
 }
 
 @mixin link-without-href-interactive() {
+	&.focus,
+	&:focus,
+	&:hover,
 	&:not([href]):not([tabindex]):not(.active).focus,
 	&:not([href]):not([tabindex]):not(.active):focus,
 	&:not([href]):not([tabindex]):not(.active):hover {
