--- a/src/app/layouts/secured/secured-layout.component.html
+++ b/src/app/layouts/secured/secured-layout.component.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li class="footer-navigation__item">
-                    <a [routerLink]="['/', CONSTS.PATHS.BLOG]"
+                    <a [routerLink]="['/', CONSTS.PATHS.BLOG, CONSTS.ALL_BLOG]"
                        class="footer-navigation__link"
                     >
                         Blog
