--- a/src/common/ui/button/button.component.scss
+++ b/src/common/ui/button/button.component.scss
@@ -427,7 +427,7 @@
 			}
 		}
 
-		&--alone:not(.btn-bankid) {
+		&--alone {
 			position: relative;
 			width: $btn-width-icon-alone;
 			padding: ( $spacer / 4 );
@@ -580,26 +580,25 @@
 	}
 
 	&.btn-bankid {
-		background-color: $success-darken;
-
-		.btn__icon {
-			&::after {
-				content: '';
-				position: relative;
-				display: block;
-				width: 73px;
-				height: 14px;
-				background-image: url(../../../assets/images/social/bankid.svg);
-				background-size: auto;
-				background-repeat: no-repeat;
-				background-position-y: center;
-			}
-		}
+		background-color: $black;
 
 		&:hover,
 		&:active,
 		&:focus:active {
-			background-color: darken($success-darken, 2%);
+			background-color: lighten($black, 20%);
+		}
+
+		&::after {
+			content: '';
+			position: relative;
+			display: block;
+			width: 73px;
+			height: 14px;
+			margin: 0 auto;
+			background-image: url(../../../assets/images/social/bankid.svg);
+			background-size: auto;
+			background-repeat: no-repeat;
+			background-position: center;
 		}
 	}
 }
