PXEPR-1377 layout blog detail edit

--- a/src/common/containers/layout-container/layout-container.component.html
+++ b/src/common/containers/layout-container/layout-container.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="withHeader" class="row text-center mb-md-6">
+<div *ngIf="withHeader" class="row text-center mb-md-1">
     <div class="col-12 col-xl-6 offset-xl-3">
         <h1 [innerHTML]="pageTitle"></h1>
     </div>
 </div>
 <div *ngIf="breadcrumbItemsSimple"
         class="row">
-    <div class="col">
+    <div class="col mb-3">
         <lnd-breadcrumb [breadcrumbItems]="breadcrumbItemsSimple"></lnd-breadcrumb>
     </div>
 </div>
