feature/PXEPR-1377-2.10-fix

--- a/src/app/pages/public/blog/detail/detail.component.html
+++ b/src/app/pages/public/blog/detail/detail.component.html
@@ -13,7 +13,7 @@
                     <lnd-card
                         type="link"
                         [data]="article"
-                        [linkUrl]="[this.ROUTES.ROUTER_BLOG, activeTag.url, article.id]"
+                        [linkUrl]="[this.ROUTES.ROUTER_BLOG, article.customData, article.id]"
                     ></lnd-card>
                 </div>
             </ng-container>
