--- a/src/app/pages/consumers/request/offer-selection/offer-selection.component.html
+++ b/src/app/pages/consumers/request/offer-selection/offer-selection.component.html
@@ -71,6 +71,7 @@
                         *ngFor="let supplyPointOffer of supplyPointOffers"
                         customClass="mb-3"
                         [questions]="questions"
+                        [offerSelected]="offerSelected"
                         [supplyPointOffer]="supplyPointOffer"
                         (mouseenter)="sAnalyticsService.sFormFocus($event);sAnalyticsService.sFormChange(supplyPointOffer)"
                         (mouseleave)="sAnalyticsService.sFormBlur($event)"
