--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -102,6 +102,7 @@
                         *ngIf="!isOwner && !isFromContract"
                         label="Vybrat nabídku"
                         [type]="'primary'"
+                        [isDisabled]="offerSelected"
                         (action)="action.emit(supplyPointOffer)">
                     </lnd-button>
                 </div>
