PXEPR-1408-blog-list h3 list styles edit

--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -183,6 +183,23 @@
 				}
 			}
 		}
+
+		&--h3 {
+			> li::before {
+				padding-left: 0;
+				font-size: $h3-font-size-public-xs;
+				line-height: ( 30 / 24 );
+				font-weight: 700;
+
+				// Media queries
+				@include media-breakpoint-up(md) {
+					font-size: $h3-font-size-public-md;
+				}
+				@include media-breakpoint-up(xl) {
+					font-size: $h3-font-size-public;
+				}
+			}
+		}
 	}
 
 	ol.upper-roman {
