--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -23,7 +23,7 @@
                 <li>Pro uzavření smlouvy budete potřebovat váš mobilní telefon.</li>
             </ul>
         </div>
-        <div class="col-12 offset-xl-1 col-xl-10 background--gradient-violet py-5 mb-5">
+        <div class="col-12 col-xl-10 offset-xl-1 bg--gradient-violet py-5 mb-5">
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <h2 class="h2--public text-white">Nechcete nic vyplňovat? <br> Nemusíte!
