--- a/src/common/ui/file-uploader/file-uploader.component.html
+++ b/src/common/ui/file-uploader/file-uploader.component.html
@@ -13,21 +13,26 @@
         alt="upload ikona"
         title="upload ikona"
     >
-    <p
-        [ngClass]="mainTextCustomClass"
-        class="mb-1">
-        {{mainText}}
-        <ng-container *ngIf="labelFromMainText">
-            <label [for]="id" class="drop-zone__control link"
-                   [ngClass]="labelCustomClass">
-                nahrajte
-            </label>.
-        </ng-container>
-    </p>
-    <p class="mb-0"
-    [ngClass]="secondaryTextCustomClass">
-        {{secondaryText}}
-    </p>
+    <ng-container *ngIf="!contentTemplate">
+        <p
+            [ngClass]="mainTextCustomClass"
+            class="mb-1">
+            {{mainText}}
+            <ng-container *ngIf="labelFromMainText">
+                <label [for]="id" class="drop-zone__control link"
+                       [ngClass]="labelCustomClass">
+                    nahrajte
+                </label>.
+            </ng-container>
+        </p>
+        <p class="mb-0"
+        [ngClass]="secondaryTextCustomClass">
+            {{secondaryText}}
+        </p>
+    </ng-container>
+    <ng-container *ngIf="contentTemplate">
+        <ng-container *ngTemplateOutlet="contentTemplate"></ng-container>
+    </ng-container>
     <input [id]=id
         ng2FileSelect
         type="file"
