--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -99,6 +99,18 @@
 			color: $white;
 			font-weight: $font-weight-bold;
 		}
+
+		&--dark {
+			& > li,
+			& > li::before {
+				color: unset;
+			}
+
+			.active,
+			.active::before {
+				color: unset;
+			}
+		}
 	}
 
 	ol.circular-number-list {
