--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -3,10 +3,13 @@
         Nechcete nic vyplňovat?<br />
         Přetáhněte sem nebo nahrejte vaši poslední fakturu za elektřinu nebo plyn a o zbytek se postaráme my.<br />
         <ng-container>
-            <label [for]="idFileUploader" class="drop-zone__control btn btn-primary">
+            <label [for]="idFileUploader" class="drop-zone__control btn btn-primary mt-2 mb-4">
                 Nahrát fakturu
             </label>
         </ng-container>
+    </p>
+    <p class="mb-0 text-body small">
+        Formáty: PDF, JPG, PNG, TIFF do velikosti 10 MB.
     </p>
 </ng-template>
 <pxe-layout-container pageTitle="Nové odběrné místo">
@@ -45,10 +48,10 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <pxe-ask-for-offer-container
-                        #howItWorksFileContainer
                         [email]="authService.currentUserValue.email"
                         [idFileUploader]="idFileUploader"
                         [fileUploaderTemplate]="fileUploaderTemplate"
+                        fileUploaderWrapperCustomClass="drop-zone--zindex drop-zone--pb-small text-white"
                     ></pxe-ask-for-offer-container>
                 </div>
             </div>
@@ -96,9 +99,9 @@
                         >
                         </lnd-button>
                     </div>
-                    <p *ngIf="showTextUnderVideo">
-                        Je-li vše jasné pokračujte tlačítkem "Vyplnit".
-                    </p>
+<!--                    <p *ngIf="showTextUnderVideo">-->
+<!--                        Je-li vše jasné pokračujte tlačítkem "Vyplnit".-->
+<!--                    </p>-->
                 </div>
             </div>
         </div>
