PXEPR-1382 - upload after signin

--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -52,6 +52,7 @@
                         [idFileUploader]="idFileUploader"
                         [fileUploaderTemplate]="fileUploaderTemplate"
                         fileUploaderWrapperCustomClass="drop-zone--zindex drop-zone--pb-small text-white"
+                        [isPublic]="false"
                     ></pxe-ask-for-offer-container>
                 </div>
             </div>
