PXEPR-1422-back-from-import

--- a/src/app/pages/suppliers/import/approval/approval.component.html
+++ b/src/app/pages/suppliers/import/approval/approval.component.html
@@ -131,7 +131,7 @@
     <div class="col-12 text-center">
         <lnd-button
             customClass="ml-5"
-            label="zpět"
+            label="Zpět"
             type="link"
             (action)="backAction($event)">>
         </lnd-button>
