PXEPR-1382 - upload after signin

--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -51,7 +51,7 @@
                         [email]="authService.currentUserValue.email"
                         [idFileUploader]="idFileUploader"
                         [fileUploaderTemplate]="fileUploaderTemplate"
-                        fileUploaderWrapperCustomClass="drop-zone--zindex drop-zone--pb-small text-white"
+                        fileUploaderWrapperCustomClass="drop-zone--zindex pb-3 text-white"
                         [isPublic]="false"
                     ></pxe-ask-for-offer-container>
                 </div>
